[gd_scene load_steps=9 format=3 uid="uid://b840npjmhs4er"]

[ext_resource type="Script" path="res://player.gd" id="1_6wpji"]
[ext_resource type="Texture2D" uid="uid://3dbidv0hsedg" path="res://FUZ/Fuz4thMinigame/player.png" id="2_qql88"]
[ext_resource type="PackedScene" uid="uid://bimhywqj8gces" path="res://FUZ/Fuz4thMinigame/plate.tscn" id="3_23bvf"]
[ext_resource type="FontFile" uid="uid://bpsekiqeav6qq" path="res://FUZ/Fuz4thMinigame/PixelOperator8.ttf" id="4_cbo0e"]
[ext_resource type="Texture2D" uid="uid://fusx1fcu8tfl" path="res://FUZ/Fuz4thMinigame/warning.png" id="5_tqd2k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i86wr"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6rl2"]
size = Vector2(32, 6.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nw14"]
size = Vector2(32, 32)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 0
script = ExtResource("1_6wpji")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qql88")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i86wr")

[node name="LeftPlate" parent="." instance=ExtResource("3_23bvf")]
position = Vector2(-38, 0)

[node name="RightPlate" parent="." instance=ExtResource("3_23bvf")]
position = Vector2(40, 0)

[node name="WeightLabel" type="Label" parent="."]
z_index = 8
offset_left = -16.0
offset_top = -46.0
offset_right = 24.0
offset_bottom = -23.0
theme_override_colors/font_color = Color(6.73831e-07, 0.932416, 0.318866, 1)
theme_override_fonts/font = ExtResource("4_cbo0e")
text = "+3"

[node name="Warning" type="Sprite2D" parent="."]
visible = false
z_index = 8
position = Vector2(-1, -62)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_tqd2k")

[node name="HeadBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadBox"]
position = Vector2(0, -14.75)
shape = SubResource("RectangleShape2D_a6rl2")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_4nw14")

[connection signal="catch_ball" from="LeftPlate" to="." method="_on_left_plate_catch_ball"]
[connection signal="catch_object" from="LeftPlate" to="." method="_on_left_plate_catch_object"]
[connection signal="catch_ball" from="RightPlate" to="." method="_on_right_plate_catch_ball"]
[connection signal="catch_object" from="RightPlate" to="." method="_on_right_plate_catch_object"]
[connection signal="area_entered" from="HeadBox" to="." method="_on_head_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
